--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "jquery-ui": "^1.12.1",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3"
     }
