--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "laravel-echo": "^1.8.1",
         "pusher-js": "^4.3.1",
         "vue": "^2.6.10",
+        "vue-chat-scroll": "^1.4.0",
         "vue-router": "^3.1.3",
         "vuetify": "^2.3.7"
     }
