--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ APP_URL=http://127.0.0.1
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
+#DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
 #DB_PORT=3306
 #DB_DATABASE=blog
